--- a/package.json
+++ b/package.json
@@ -1,32 +1,28 @@
 {
   "name": "barragens",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "leaflet": "^1.3.4",
     "antd": "^3.13.0",
-    "react-leaflet": "^2.0.1",
+    "leaflet": "^1.3.4",
     "react": "^16.7.0",
-    "react-ga": "^2.5.3",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3",
+    "react-ga": "^2.5.3",
+    "react-leaflet": "^2.0.1",
     "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.3",
+    "styled-components": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "devDependencies": {
+    "babel-core": "^6.21.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-es2015": "^6.18.0",
+    "webpack": "^4.8.3",
+    "webpack-cli": "^2.1.4"
+  }
 }
