Changing color scheme from Ant

--- a/.babelrc
+++ b/.babelrc
@@ -10,6 +10,13 @@
   ],
   "plugins": [
     "@babel/plugin-syntax-dynamic-import",
+    [
+      "import",
+      {
+        "libraryName": "antd",
+        "style": true
+      }
+    ],
     "@babel/plugin-syntax-import-meta",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-json-strings",
