--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
+    "@svgr/webpack": "^4.1.0",
     "babel-loader": "^8.0.5",
+    "babel-plugin-import": "^1.11.0",
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^2.1.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^2.1.1",
