--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-loader": "^8.0.5",
     "babel-plugin-import": "^1.11.0",
     "babel-preset-es2015": "^6.24.1",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^2.1.0",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
