Adding leaflet cluster

--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "antd": "^3.13.0",
-    "leaflet": "^1.3.4",
+    "leaflet": "^1.4.0",
+    "leaflet.markercluster": "^1.4.1",
+    "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.3",
-    "react-leaflet": "^2.0.1",
+    "react-leaflet": "^2.2.0",
+    "react-leaflet-markercluster": "^2.0.0-rc3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.dev.js",
@@ -28,11 +32,13 @@
     "@babel/plugin-proposal-logical-assignment-operators": "^7.2.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.2.0",
     "@babel/plugin-proposal-numeric-separator": "^7.2.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.1",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/plugin-transform-spread": "^7.2.2",
     "@babel/preset-react": "^7.0.0",
     "@svgr/webpack": "^4.1.0",
     "babel-loader": "^8.0.5",
