--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,8 @@
         "style": true
       }
     ],
+    "@babel/plugin-transform-spread",
+    "@babel/plugin-proposal-object-rest-spread",
     "@babel/plugin-syntax-import-meta",
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-json-strings",
