Customizing marker icon and adding styles from cluster

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "leaflet.markercluster": "^1.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.3",
     "react-leaflet": "^2.2.0",
