--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "leaflet.markercluster": "^1.4.1",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
+    "react-animations": "^1.0.0",
     "react-dom": "^16.7.0",
     "react-ga": "^2.5.7",
     "react-leaflet": "^2.2.0",
     "react-leaflet-markercluster": "^2.0.0-rc3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-spring": "^7.2.10",
     "styled-components": "^4.1.3",
     "uuid": "^3.3.2"
   },
