Refactory to hooks

--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "leaflet": "^1.4.0",
     "leaflet.markercluster": "^1.4.1",
     "prop-types": "^15.6.2",
-    "react": "^16.7.0",
-    "react-animations": "^1.0.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-ga": "^2.5.7",
     "react-leaflet": "^2.2.0",
     "react-leaflet-markercluster": "^2.0.0-rc3",
+    "react-pose": "^4.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.3",
